Cacti CHANGELOG

1.2
-feature#122: Support a Site Branch Type
-feature#973: Obtain users email and full name from ldap 
-feature#1347: Update automation logging to work better
-feature#1142: Add Site dropdown to the Graphs and Data Source pages
-feature#1399: Allow 'requires' to include version against a plugin
-issue#1072: CVE-2009-4112 with regard to exploiting Data Input methods
-issue#1097: When copying template user, enable that user, also template users should be disabled by default
-issue#1174: Disable drag and drop when tree is not in edit mode
-issue#1408: Update SQL / Backtrace to use new clean_up_lines() function
-issue: Move Graph removal function to Graph API
-issue#1414: DSSTATS reports incorrectly that a data source does not exist
-feature: Make Graph and Data Source suggested naming more efficient
-feature: Make tree editing responive
-feature: Add support for DDERIVE and DCOUNTER to Cacti
-feature: Updated Chinese Simplified translations
-feature: Updated Dutch translations

1.1.36
-issue#934: Template names missing in graph management list
-issue#1211: CDEF and VDEF Item Edit do not use correct procedures
-issue#1250: Language support does not support localization properly
-issue#1331: Log Rotation should occur at midnight on system
-issue#1334: Console->Users->(Edit) Permissions checkmark descriptions missing
-issue#1336: Debian test suite reports php error
-issue#1338: Allow automation to be run in debug mode from GUI
-issue#1339: First graph of second page does not render
-issue#1340: Unable to open Time Graph View in new tab
-issue#1348: Toggle context menu of Zoom
-issue#1351: Errorimage does not render on systems without GD ttf support
-issue#1353: New installation without config.php silently throws errors
-issue#1355: Single tree can have the order of the tree changed
-issue#1357: Data Profile disable fields shown temporarily as editable
-issue#1359: Settings page generates error for removed plugin tab